End of section 9

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
-    "cSpell.words": [
-        "hmac",
-        "HMACSHA",
-        "titlecase",
-        "toastr"
-    ]
+  "cSpell.words": [
+    "hmac",
+    "HMACSHA",
+    "kolkov",
+    "tabset",
+    "titlecase",
+    "toastr"
+  ]
 }
